2005-01-07  Per Bothner  <per@bothner.com>

	* Makefile.am (patch-source-list): Filter with sed out initial "./".
	(select-java1, select-java2, select-java5): Use new PreProcess class.

	* build.xml: Add support for #ifndef JAVA5.

2005-01-03  Per Bothner  <per@bothner.com>

	* kawa/lang/SyntaxPattern.java (translate): Pass correct SyntaxForm.
	(literalIdentifierEq): Finish implementation.

	* kawa/lang/SyntaxRules.java (expand): Recover robustly if there
	was an error defining the macro.

	* kawa/lang/Translator.java (makeAlias, makeRenamedAlias): Some
	code moving to reduce duplication..

2005-01-02  Per Bothner  <per@bothner.com>

	* Makefile.am (JAVATOP): Remove unused macro.

	* Makefile.am: Update "select" rules to use new "preprocessor" syntax.
	* build.xml: Likewise.

	* kawa/lang/Quote.java, kawa/lang/SyntaxTemplate.java,
	kawa/standard/syntax.java: Change "select" (preprocessor) syntax.

2004-12-29  Per Bothner  <per@bothner.com>

	* kawa/standard/require.java (importDefinitions): Avoid some
	needless work in immediate mode.

2004-12-27  Per Bothner  <per@bothner.com>

	* kawa/standard/define_syntax.java (scanForm): Use new isStatic().

	* Makefile.am (SUBDIRS): "Inline" SUBDIRS from gnu and gnu/kawa.
	(install-html): Don't do into now Makefile-free gnu directory.
	* configure.in (AC_OUTPUT): Update accordingly.

2004-12-26  Per Bothner  <per@bothner.com>

	* kawa/lang/SyntaxPattern.java (literalIdentifierEq,
	getLiteralsList): New static methods.
	(translate): Use literalIdentifierEq.
	* kawa/standard/syntax_rules.java: (rewriteForm): Use new
	SyntaxPattern.getLiteralsList method.
	* kawa/standard/syntax_case.java: (rewriteForm): Likewise.

	* kawa/lang/SyntaxRule.java (<init>): Take extra SyntaxForm parameter.
	* kawa/lang/SyntaxTemplate.java: Likewise.
	(convert_template): Pass extra SyntaxForm parameter.
	* kawa/standard/syntax.java: Fix to pass null SyntaxForm.
	* kawa/standard/define_syntax.java (scanForDefinitions): Replace by ...